setted up node_modules

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>git index page</title>
+        <title>Ars index page</title>
     </head>
     <body>
-        
+        <h1>Heyyyyy</h1>
+        <h1>Wssup</h1>
     </body>
 </html>
