reserve table card BS4 index page

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
                         <h1>Ristorante con Fusion</h1>
                         <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                     </div>
-                    <div class="col-12 col-sm align-self-center">
+                    <div class="col-12 col-sm-3 align-self-center">
                         <img src="img/logo.png" class="img-fluid" alt="logo">
+                    </div>
+                    <div class="col-12 col-sm align-self-center">
+                        <a class="btn btn-warning btn-lg btn-block" href="#ReserveTable">Reserve Table</a>
                     </div>
                 </div>
             </div>
@@ -59,7 +62,7 @@
                                 <span class="badge badge-danger">HOT</span>
                                 <span class="badge badge-pill badge-secondary">$4.99</span>
                             </h2>
-                            <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                            <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                         </div>
                     </div>
                 </div>
@@ -73,9 +76,12 @@
                 <div class="col col-sm col-md">
                     <div class="media">
                         <div class="media-body">
-                            <h2>Weekend Grand Buffet</h2>
-                            <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                            <h2 class="mt-0">Weekend Grand Buffet
+                                <span class="badge badge-danger">NEW</span>
+                            </h2>
+                            <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                         </div>
+                        <img src="img/buffet.png" class="d-flex ml-3 img-thumbnail align-self-center" alt="buffet">
                     </div>
                 </div>
             </div>
@@ -90,13 +96,68 @@
                         <div class="media-body">
                             <h2 class="mt-0">Alberto Somayya</h2>
                             <h4>Executive Chef</h4>
-                            <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                            <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row row-content align-items-center">
+                <div class="col-12 offset-sm-2 col-sm-8">
+                    <div class="card" id="ReserveTable">
+                        <h2 class="card-header bg-warning text-white">Reserve a Table</h2>
+                        <div class="card-body">
+                            <form>
+                                <div class="form-group row">
+                                    <label for="numberofguests" class="col-12 col-md-2 col-form-label">Number of Guests</label>
+                                    <div class="col-12 col-md-10">
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="numberofguests" id="guests1" value="guests1">
+                                            <label class="form-check-label" for="guests1">1</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="numberofguests" id="guests2" value="guests2">
+                                            <label class="form-check-label" for="guests2">2</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="numberofguests" id="guests3" value="guests3">
+                                            <label class="form-check-label " for="guests3">3</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="numberofguests" id="guests4" value="guests4">
+                                            <label class="form-check-label " for="guests4">4</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="numberofguests" id="guests5" value="guests5">
+                                            <label class="form-check-label " for="guests5">5</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="numberofguests" id="guests6" value="guests6">
+                                            <label class="form-check-label " for="guests6">6</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="time" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                                    <div class="col-12 col-md-4">
+                                        <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                    </div>
+                                    <div class="col-12 col-md-4">
+                                        <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="offset-md-2 col-md-10">
+                                        <button type="submit" class="btn btn-primary btn-lg">Reserve</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    
+
         <footer class="footer">
             <div class="container">
                 <div class="row ">             
