--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </ul>
                     <!-- login Button for login Modal -->
                     <span class="navbar-text">
-                        <a data-toggle="modal" data-target="#loginModal">
+                        <a data-toggle="modal" data-target="#loginModal" role="button">
                             <span class="fa fa-sign-in"></span> Login
                         </a>
                     </span>
@@ -86,13 +86,133 @@
                         <img src="img/logo.png" class="img-fluid" alt="logo">
                     </div>
                     <div class="col-12 col-sm align-self-center">
-                        <a role="button" class="btn btn-warning btn-lg btn-block" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom" href="#ReserveForm">Reserve Table</a>
+                        <a role="button" class="btn btn-warning btn-lg btn-block" data-toggle="modal" data-target="#reserveTableModal">Reserve Table</a>
                     </div>
                 </div>
             </div>
         </header>
+
+        <!-- Reserve Table Modal -->
+        <div id="reserveTableModal" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-lg" role="content">
+                <!-- modal content -->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h2 class="modal-title">Reserve a Table</h2>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group row">
+                                <label for="numberofguests" class="col-12 col-md-2 col-form-label">Number of Guests</label>
+                                <div class="col-12 col-md-10">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="numberofguests" id="guests1" value="1">
+                                        <label class="form-check-label" for="guests1">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="numberofguests" id="guests2" value="2">
+                                        <label class="form-check-label" for="guests2">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="numberofguests" id="guests3" value="3">
+                                        <label class="form-check-label " for="guests3">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="numberofguests" id="guests4" value="4">
+                                        <label class="form-check-label " for="guests4">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="numberofguests" id="guests5" value="5">
+                                        <label class="form-check-label " for="guests5">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="numberofguests" id="guests6" value="6">
+                                        <label class="form-check-label " for="guests6">6</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="section" class="col-12 col-md-2 col-form-label">Section</label>
+                                <div class="col-12 col-md-10">
+                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                        <label class="btn btn-success active">
+                                          <input type="radio" name="section" id="Non-Smoking" value="NonSmoking" checked> Non-Smoking
+                                        </label>
+                                        <label class="btn btn-danger">
+                                          <input type="radio" name="section" id="Smoking" value="Smoking"> Smoking
+                                        </label>
+                                      </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="time" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                                <div class="col-12 col-md-4">
+                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-12 col-md-4">
+                                    <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-md-2 col-md-10">
+                                    <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     
         <div class="container">
+            <div class="row row-content">
+                <div class="col">
+                    <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img class="d-block img-fluid" src="img/uthappizza.png" alt="uthappizza">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h2>Uthappizza
+                                        <span class="badge badge-danger">HOT</span>
+                                        <span class="badge badge-pill badge-secondary">$4.99</span>
+                                    </h2>
+                                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="img/buffet.png" alt="buffet">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h2>Weekend Grand Buffet
+                                        <span class="badge badge-danger">NEW</span>
+                                    </h2>
+                                    <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="img/alberto.png" alt="alberto">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h2>Alberto Somayya</h2>
+                                    <h4>Executive Chef</h4>
+                                    <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                                </div>
+                            </div>
+                        </div>
+                        <ol class="carousel-indicators">
+                            <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#mycarousel" data-slide-to="1"></li>
+                            <li data-target="#mycarousel" data-slide-to="2"></li>
+                        </ol>
+                        <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
             <div class="row row-content align-items-center">
                 <div class="col-12 col-sm-4 order-sm-last col-md-3">
                     <h3>Our Lipsmacking Culinary Creations</h3>
@@ -146,7 +266,8 @@
                 </div>
             </div>
 
-            <div class="row row-content align-items-center">
+            <!-- Reserve Table Card -->
+            <!-- <div class="row row-content align-items-center">
                 <div class="col-12 offset-sm-2 col-sm-8">
                     <div class="card" id="ReserveForm">
                         <h2 class="card-header bg-warning text-white">Reserve a Table</h2>
@@ -199,7 +320,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <footer class="footer">
