--- a/index.html
+++ b/index.html
@@ -210,6 +210,14 @@
                         <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                             <span class="carousel-control-next-icon"></span>
                         </a>
+                        <div class="btn-group" id="carouselButton">
+                            <button class="btn btn-danger btn-sm" id="carousel-pause">
+                                <span class="fa fa-pause"></span>
+                            </button>
+                            <button class="btn btn-danger btn-sm" id="carousel-play">
+                                <span class="fa fa-play"></span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -369,10 +377,22 @@
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script>
-            // jQuery for tooltip on "Reserve Table" button
+            //carousel control buttons -- play & pauses
             $(document).ready(function() {
-                $('[data-toggle="tooltip"]').tooltip();
+                 $('#mycarousel').carousel({ interval: 100 });
+                 $('#carousel-pause').click(function(){
+                     $('#mycarousel').carousel('pause');
+                 });
+                 $('#carousel-play').click(function(){
+                     $('#mycarousel').carousel('cycle');
+                 });
             });
+
+
+            // jQuery for tooltip on "Reserve Table" button
+            // $(document).ready(function() {
+            //     $('[data-toggle="tooltip"]').tooltip();
+            // });
         </script>
     </body>
 </html>
