--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                     </ul>
                     <!-- login Button for login Modal -->
                     <span class="navbar-text">
-                        <a data-toggle="modal" data-target="#loginModal" role="button">
+                        <!-- <a data-toggle="modal" data-target="#loginModal" role="button"> -->
+                        <a role="button" id="loginButton">
                             <span class="fa fa-sign-in"></span> Login
                         </a>
                     </span>
@@ -86,7 +87,9 @@
                         <img src="img/logo.png" class="img-fluid" alt="logo">
                     </div>
                     <div class="col-12 col-sm align-self-center">
-                        <a role="button" class="btn btn-warning btn-lg btn-block" data-toggle="modal" data-target="#reserveTableModal">Reserve Table</a>
+                        <!-- <a role="button" class="btn btn-warning btn-lg btn-block" data-toggle="modal" data-target="#reserveTableModal"> -->
+                        <a role="button" class="btn btn-warning btn-lg btn-block" id="reserveTableButton">
+                            Reserve Table</a>
                     </div>
                 </div>
             </div>
@@ -372,6 +375,16 @@
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script>
+            //modal triggers
+            $(document).ready(function() {
+                $('#loginButton').click(function() {
+                    $('#loginModal').modal('toggle');
+                });
+                $('#reserveTableButton').click(function() {
+                    $('#reserveTableModal').modal('toggle');
+                });
+            });
+
             //carousel control buttons -- play & pauses
             $(document).ready(function() {
                  $('#mycarousel').carousel({ interval: 2000 });
