--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8">
@@ -7,12 +7,16 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
+
         <!-- Icon Packs -->
-        <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-        <title>Ars index page</title>
+        <!-- <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css"> -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css">
+        <title>Ristorante Con Fusion index page</title>
     </head>
     <body>
         <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
@@ -145,7 +149,7 @@
                                         <label class="btn btn-danger">
                                           <input type="radio" name="section" id="Smoking" value="Smoking"> Smoking
                                         </label>
-                                      </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -169,6 +173,7 @@
             </div>
         </div>
     
+        <!-- Carousel -->
         <div class="container">
             <div class="row row-content">
                 <div class="col">
@@ -219,6 +224,7 @@
                     </div>
                 </div>
             </div>
+            
             <div class="row row-content align-items-center">
                 <div class="col-12 col-sm-4 order-sm-last col-md-3">
                     <h3>Our Lipsmacking Culinary Creations</h3>
@@ -365,50 +371,18 @@
                </div>
                <div class="row justify-content-center">             
                     <div class="col-auto">
-                        <p>© Copyright 2018 Ristorante Con Fusion</p>
+                        <p>© Copyright 2018 Ristorante Con Fusion<br>Developed by <a href="https://www.linkedin.com/in/arslaan-shaikh-9659a6192/"><b>Arslaan Shaikh</b></a></p>
                     </div>
                </div>
             </div>
         </footer>
         <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
-        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+        <!-- <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script>
-            //modal triggers
-            $(document).ready(function() {
-                $('#loginButton').click(function() {
-                    $('#loginModal').modal('toggle');
-                });
-                $('#reserveTableButton').click(function() {
-                    $('#reserveTableModal').modal('toggle');
-                });
-            });
-
-            //carousel control buttons -- play & pauses
-            $(document).ready(function() {
-                 $('#mycarousel').carousel({ interval: 2000 });
-                 $('#carouselButton').click(function() {
-                    if ($('#carouselButton').children('span').hasClass('fa-pause'))
-                    {
-                        $('#mycarousel').carousel('pause'); //pause carousel
-                        $('#carouselButton').children('span').removeClass('fa-pause');
-                        $('#carouselButton').children('span').addClass('fa-play');
-                    }
-                    else if ($('#carouselButton').children('span').hasClass('fa-play'))
-                    {
-                        $('#mycarousel').carousel('cycle'); //start carousel
-                        $('#carouselButton').children('span').removeClass('fa-play');
-                        $('#carouselButton').children('span').addClass('fa-pause');
-                    }
-                });
-            });
-
-
-            // jQuery for tooltip on "Reserve Table" button
-            // $(document).ready(function() {
-            //     $('[data-toggle="tooltip"]').tooltip();
-            // });
-        </script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
